# Agentic-RAG

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  HANDOFF.md  Makefile  README.md  debug_settings.py  plan_layer.md  pyproject.toml  test_ollama.py  test_output.md
client/: index.html
data/: 02_12_2025_CSBH_574_NOBLE_PALACE_TAY_THANG_LONG_HDBM.md  CONCEPT_THIET_KE_08_02_2025_only_hang_muc_noi_dung.md  Noble_Palace_TAY_HO.md  TAY_HO_2.md  fact_sheet_sunshine.md
deploy/: docker-compose.internal.yml  docker-compose.yml
ingest_service/: Dockerfile  pipeline.py  requirements.txt
orchestrator_service/: Dockerfile  agent.py  app.py  config.py  guardrails.py  llm_client.py  observability.py  requirements.txt  sales_workflow.py  web_search.py
retrieval_service/: Dockerfile  app.py  client.py  pipeline.py  requirements.txt
scripts/: benchmark_retrieval.py  cli_client.py  e2e_smoke_test.py  ingest_data_folder.py  ingest_data_folder.py.bak  ingest_markdown_to_retrieval.py  smoke_test_docker.py  test_qdrant_conn.py  test_web_fallback.py  test_web_search.py
shared/: config.py  schemas.py
tests/: test_ingest_pipeline.py  test_orchestrator_e2e.py  test_retrieval_service_api.py
